stored first table in localStorage

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         </table>
         <section class="addPhoto">
-            <h2>Dodaj sliku</h2>
+            <h2 class="naslovDodavanja">Dodaj sliku</h2>
             <div class="dodaj">
                 <input id="dodajSliku" type="file" accept="image/png, image/jpg">
                 <textarea name="" id="dodajTekst" cols="30" rows="5"></textarea>
