--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="timeInfo">
                     <label>Količina</label>
-                    <input id="kol1" class="setKol" type="number">
+                    <input id="kol1" class="setKol" type="text">
                 </div>
             </div>
         </div>
@@ -45,10 +45,16 @@
             </div>
             <tr>
                 <th>VRIJEME</th>
-                <th>OPERACIJA - GTN - 1</th>
+                <th class="operacija">OPERACIJA - GTN - 1</th>
                 <th class="horis"><div class="gore"></div><h1 >KOLIČINE</h1></th>
             </tr>
-
+        </table>
+        <table>
+            <tr>
+                <th>VRIJEME</th>
+                <th class="operacija">OPERACIJA - GTN - 1</th>
+                <th>Stacionaža čela</th>
+            </tr>
         </table>
       <!--   <section class="addPhoto">
             <h2 class="naslovDodavanja">Dodaj sliku</h2>
