--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
                 <th class="radiliste">Radilište</th>
                 <th>
                     <div class="gtn1">GTN-2</div>
-
                     <div class="stacDiv">
                         <div>Stac. čelo: 0+281.50</div>
                         <div class="line"></div>
@@ -140,6 +139,7 @@
             </tr>
         </table>
         <div contenteditable="true" class="betweenTable"></div>
+        <!-- tabela eks -->
         <table id="eks">
             <div class="smjenski eksplozivna">EKSPLOZIVNA SREDSTVA</div>
             <tr class="sameWidth">
@@ -167,26 +167,24 @@
                 <td>0</td>
             </tr>
         </table>
-        <div contenteditable="true" class="centarDiv">
-            <div class="slump">SLUMP</div>
-            <div class="same">
-                <div class="gore">Vrijeme</div>
-                <div class="horiz">Kubika</div>
-            </div>
-            <div class="same">
-                <div class="gore"></div>
-                <div></div>
-            </div>
-            <div class="same horis">
-                <div class="gore">Stacionaža</div>
-                <div class="mbDiv">
-                    <div class="horiz mb">M.B.</div>
-                    <div></div>
-                </div>
-            </div>
-            <div class="same"></div>
-        </div>
         <table>
+            <div class="slump">SLUMP TEST</div>
+            <tr contenteditable="true">
+                <th class="slumpDiv">Iznos</th>
+                <th class="slumpDiv">Vrijeme</th>
+                <th class="slumpDiv">Kubik</th>
+                <th class="slumpDiv">Od:</th>
+                <th class="slumpDiv">Do:</th>
+                <th class="slumpDiv">Kontrola</th>
+            </tr>
+            <tr contenteditable="true">
+                <th class="slumpDiv"></th>
+                <th class="slumpDiv"></th>
+                <th class="slumpDiv"></th>
+                <th class="slumpDiv"></th>
+                <th class="slumpDiv"></th>
+                <th class="slumpDiv"></th>
+            </tr>
             <tr class="sameWidth">
                 <th>Agregat 0-4</th>
                 <th>Agregat 4-8</th>
