--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         <!-- Unos podataka -->
         <div class="info podaciDiv">
             <select name="ime" id="imeUlaz">
-                <option value="jasmin">Jasmin Ubiparip</option>
-                <option value="nedim">Nedim Hrustić</option>
+                <option value="Jasmin Ubiparip">Jasmin Ubiparip</option>
+                <option value="Nedim Hrustić">Nedim Hrustić</option>
+                <option value="Almer Sarač">Almer Sarač</option>
+                <option value="Ernest Salkić">Ernest Salkić</option>
             </select>
             <select name="dan" id="danUlaz">
                 <option value="Ponedjeljak">Ponedjeljak</option>
@@ -81,6 +83,7 @@
         </div>
         <div class="info slikeDiv hidden">
             <input type="file">
+            <input type="text" placeholder="Napomena za sliku">
             <button class="snimi">Dodaj</button>
         </div>
         <!-- header div -->
