--- a/index.html
+++ b/index.html
@@ -231,6 +231,10 @@
             <div class="divNapomene">Napomene:</div>
         </article>
         <article class="listaSlika"></article>
+        <div class="clearDisplay">
+            <button id="clear">Briši memoriju</button>
+            <button id="noDisplay">Ukloni nepotrebno</button>
+        </div>
     </main>
     <script src="js/info.js"></script>
     <script src="js/main.js"></script>
