--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
                 <button id="button2">GTN - 2</button>
             </div>
         </div>
-
         <div class="info napomeneDiv hidden">
             <textarea id="napomena" cols="30" rows="5"></textarea>
             <button id="dodajNapomenu" class="snimi">Dodaj</button>
@@ -88,7 +87,7 @@
         </div>
         <!-- header div -->
         <article class="infoShift">
-            <div>
+            <div class="aktivPrint hidden">
                 <h3>ADRIATIC METALS PLC</h3>
                 <h3>EASTER MINING D.O.O. VAREŠ</h3>
                 <h3>POGON: JAMA "RUPICE"</h3>
