--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     <div class="gtn1">GTN-1</div>
 
                     <div class="stacDiv">
-                        <div>Stac. čelo: 0+181.60</div>
+                        <div contenteditable="true">Stac. čelo: </div>
                         <div class="line"></div>
-                        <div> Stac. ventilacija: 0+128 m</div>
+                        <div contenteditable="true"> Stac. ventilacija: </div>
                     </div>
 
                 </th>
@@ -127,9 +127,9 @@
                 <th>
                     <div class="gtn1">GTN-2</div>
                     <div class="stacDiv">
-                        <div>Stac. čelo: 0+281.50</div>
+                        <div contenteditable="true">Stac. čelo:</div>
                         <div class="line"></div>
-                        <div> Stac. ventilacija: 0+237 m</div>
+                        <div  contenteditable="true"> Stac. ventilacija:</div>
                     </div>
                 </th>
                 <th class="noBorderBotton">Utrošak</th>
