--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h3>EASTER MINING D.O.O. VAREŠ</h3>
                 <h3>POGON: JAMA "RUPICE"</h3>
             </div>
-            <div>
+            <div class="zaLap">
                 <h3 id="datum">DATUM: </h3>
                 <h3 id="danIzlaz">DAN:</h3>
                 <h3 id="smjenaIzlaz">SMJENA:</h3>
@@ -235,12 +235,11 @@
         <article class="listaNapomena">
             <div class="divNapomene">Napomene:</div>
         </article>
-        <article class="listaSlika"></article>
+        <article class="listaSlika">slike</article>
         <div class="clearDisplay">
             <button id="clear">Briši memoriju</button>
-            <button id="noDisplay">Ukloni nepotrebno</button>
+            <button id="print">Print</button>
         </div>
-        <button id="print">Print</button>
     </main>
     <script src="js/info.js"></script>
     <script src="js/main.js"></script>
