--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <main>
         <header>
-            <img class="logo" src="images/logoAdriatic.png" alt="">
+            <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ20o5YnSPQWb8ptdd7vbwQxXxlRLivEA3aoA&usqp=CAU" alt="">
         </header>
         <!-- Odabir unosa podataka -->
         <section id="buttonDiv">
@@ -30,10 +30,10 @@
         <!-- Unos podataka -->
         <div class="info podaciDiv">
             <select name="ime" id="imeUlaz">
-                <option value="Jasmin Ubiparip">Jasmin Ubiparip</option>
-                <option value="Nedim Hrustić">Nedim Hrustić</option>
-                <option value="Almer Sarač">Almer Sarač</option>
-                <option value="Ernest Salkić">Ernest Salkić</option>
+                <option value="Person 1">Person 1</option>
+                <option value="Person 2">Person 2</option>
+                <option value="Person 3">Person 3</option>
+                <option value="Person 4">Person 4</option>
             </select>
             <select name="dan" id="danUlaz">
                 <option value="Ponedjeljak">Ponedjeljak</option>
